# server/gen/http/admin/server/encode_decode.go
@@ -11603,6 +11603,7 @@ func marshalAdminGlobalRemoteSessionIssuerToGlobalRemoteSessionIssuerResponseBod
 		GlobalClientCount:             v.GlobalClientCount,
 		TenantClientCount:             v.TenantClientCount,
 		TrustedUserSessionIssuerCount: v.TrustedUserSessionIssuerCount,
+		EmaBindingCount:               v.EmaBindingCount,
 	}
 	if v.Issuer != nil {
 		res.Issuer = marshalTypesRemoteSessionIssuerToRemoteSessionIssuerResponseBody(v.Issuer)
